# litesync-bridge

./: .gitignore  Cargo.toml  DESIGN.md  Makefile  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/litesync-commonlib/: Cargo.toml
crates/litesync-commonlib/src/: chunk.rs  couchdb.rs  crypto.rs  doc.rs  lib.rs  path.rs
deploy/: litesync-bridge.service
src/: bridge.rs  config.rs  hub.rs  main.rs  reconcile.rs  state.rs
src/peer/: couchdb.rs  couchdb_ops.rs  mod.rs  storage.rs
tests/: docker-compose.yml
tests/integration/: couchdb_client.rs  helpers.rs  main.rs  roundtrip.rs
