[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0-alpha.1"
edition = "2024"
license = "MIT"
rust-version = "1.85"

[package]
name = "litesync-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Bidirectional sync daemon between CouchDB (Self-hosted LiveSync) and local filesystem"

[[bin]]
name = "litesync-bridge"
path = "src/main.rs"

[dependencies]
litesync-commonlib = { path = "crates/litesync-commonlib" }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
notify = "7"
filetime = "0.2"
parking_lot = "0.12"

[dev-dependencies]
tempfile = "3.27.0"
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"], default-features = false }
base64 = "0.22"
serde_json = "1"

[[test]]
name = "integration"
path = "tests/integration/main.rs"

[profile.release]
lto = true
strip = true
codegen-units = 1
